--- a/dxwebsrv.lpi
+++ b/dxwebsrv.lpi
@@ -387,6 +387,7 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <UseExternalDbgSyms Value="True"/>
       </Debugging>
     </Linking>
